--- a/faust-app/package.json
+++ b/faust-app/package.json
@@ -24,7 +24,10 @@
     "sass": "^1.77.3"
   },
   "devDependencies": {
-    "next-secure-headers": "^2.2.0"
+    "autoprefixer": "^10.4.20",
+    "next-secure-headers": "^2.2.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   },
   "engines": {
     "node": ">=18",
