--- a/faust-app/package.json
+++ b/faust-app/package.json
@@ -15,6 +15,7 @@
     "@faustwp/core": "^3.0.3",
     "@wordpress/base-styles": "^4.49.0",
     "@wordpress/block-library": "^7.19.0",
+    "@wpengine/atlas-next": "^1.4.1",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
