--- a/faust-app/package.json
+++ b/faust-app/package.json
@@ -19,16 +19,18 @@
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
-    "next": "^12.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^13.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.77.3"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "autoprefixer": "^10.4.20",
     "next-secure-headers": "^2.2.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "typescript": "5.6.2"
   },
   "engines": {
     "node": ">=18",
